Disabled AOS animations on mobile devices, fixed a gif image

--- a/src/app/modules/home/home.component.scss
+++ b/src/app/modules/home/home.component.scss
@@ -22,7 +22,7 @@ div{
         }
     }
 
-    .cards {
+    /*.cards {
         display: flex;
         //position: fixed;
         bottom: 2%;
@@ -32,7 +32,7 @@ div{
         border-radius: 1rem;
         box-shadow: 4px 4px 12px 2px rgba($color: #000000, $alpha: 0.7);
         padding: 4rem;
-    }
+    }*/
 }
 
 @keyframes typingAnim {
